# games101

homework/GAMES101_FinalProject_S2021/: CMakeLists.txt  config.h.in
homework/GAMES101_FinalProject_S2021/lib/glad/include/glad/: glad.h
homework/GAMES101_FinalProject_S2021/lib/glad/src/: glad.c
homework/GAMES101_FinalProject_S2021/shaders/: final.frag  normals.frag  particle.frag  particle.vert  particle_depth.frag  particle_depth.vert  smooth.frag
homework/GAMES101_FinalProject_S2021/src/: main.cpp  particle.h  pbf_solver.cpp  pbf_solver.h  shader.h
homework/Homework1/Assignment1/: main.cpp
homework/Homework2/代码框架/: main.cpp  rasterizer.cpp
homework/Homework3/Assignment3/: main.cpp  rasterizer.cpp
homework/Homework4/Assignment4/: main.cpp
homework/Homework5/Assignment5/: Renderer.cpp  Triangle.hpp
homework/Homework6/Assignment6/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp
homework/Homework7/Assignment7/: BVH.cpp  Bounds3.hpp  Scene.cpp  Triangle.hpp
homework/Homework8/Assignment8/src/: rope.cpp
notes/Lec 13141516(Ray Tracing)/: Lec 1314.md  Lec 1516.md
notes/Lec 1718(Material)/: Lec 17.md
notes/Lec 1920/: Lec 19.md  Lec 20.md
notes/Lec 2122(Animation)/: Lec 21.md
notes/Lec0304(Transformation)/: Lec 0304.md
notes/Lec0506/: Lec 06.md
notes/Lec0506(Rasterization)/: Lec 05.md
notes/Lec070809(Shading)/: Lec 07.md  Lec 08.md  Lec 09.5.md  Lec 09.md
notes/Lec1011(Geometry)/: Lec 1011.md
notes/Lec101112(Geometry)/: Lec 101112.md
